--- a/store.html
+++ b/store.html
@@ -16,7 +16,7 @@
                     <span class="shop-item-title">Snoep</span>
                     <img class="shop-item-image" src="Images/Snoep.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">&euro;1.50</span>
+                        <span class="shop-item-price">1.50</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
                     </div>
                 </div>
@@ -24,7 +24,7 @@
                     <span class="shop-item-title">Koek</span>
                     <img class="shop-item-image" src="Images/Koek.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">&euro;3,00</span>
+                        <span class="shop-item-price">3,00</span>
                         <button class="btn btn-primary shop-item-button"type="button">Voeg to</button>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                     <span class="shop-item-title">Chocolade</span>
                     <img class="shop-item-image" src="Images/Chocolade.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">&euro;2,50</span>
+                        <span class="shop-item-price">2,50</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
                     <span class="shop-item-title">Zuurtjes</span>
                     <img class="shop-item-image" src="Images/Zuurtjes.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">&euro;4,90</span>
+                        <span class="shop-item-price">4,90</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="cart-total">
                 <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price"><p>&euro;0</span>
+                <span class="cart-total-price">0</span>
             </div>
             <button class="btn btn-primary btn-purchase" type="button">KOOP</button>
         </section>
