--- a/store.html
+++ b/store.html
@@ -12,7 +12,7 @@
         <section class="container content-section">            <div class="shop-items">
                 <div class="shop-item">
                     <span class="shop-item-title">Snoep</span>
-                    <img class="shop-item-image" src="Images/Snoep.png">
+                    <img class="shop-item-image" src="Images/snoep.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">1.50</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
@@ -20,7 +20,7 @@
                 </div>
                 <div class="shop-item">
                     <span class="shop-item-title">Koek</span>
-                    <img class="shop-item-image" src="Images/Koek.png">
+                    <img class="shop-item-image" src="Images/koek.png">
                     <div class="shop-item-details">
                         <span class="shop-item-price">3,00</span>
                         <button class="btn btn-primary shop-item-button"type="button">Voeg to</button>
