--- a/store.html
+++ b/store.html
@@ -14,6 +14,7 @@
                     <span class="shop-item-title">Snoep</span>
                     <img class="shop-item-image" src="Images/snoep.png">
                     <div class="shop-item-details">
+                        <span>€</span>
                         <span class="shop-item-price">1.50</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
                     </div>
@@ -22,6 +23,7 @@
                     <span class="shop-item-title">Koek</span>
                     <img class="shop-item-image" src="Images/koek.png">
                     <div class="shop-item-details">
+                        <span>€</span>
                         <span class="shop-item-price">3,00</span>
                         <button class="btn btn-primary shop-item-button"type="button">Voeg to</button>
                     </div>
@@ -30,7 +32,8 @@
                     <span class="shop-item-title">Chocolade</span>
                     <img class="shop-item-image" src="Images/Chocolade.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">2,50</span>
+                        <span>€</span>
+                        <span class="shop-item-price">2.00</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
                     </div>
                 </div>
@@ -38,7 +41,8 @@
                     <span class="shop-item-title">Zuurtjes</span>
                     <img class="shop-item-image" src="Images/Zuurtjes.png">
                     <div class="shop-item-details">
-                        <span class="shop-item-price">4,90</span>
+                        <span>€</span>
+                        <span class="shop-item-price">4.00</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
                     </div>
                 </div>
@@ -47,7 +51,6 @@
 
         </section>
         <section class="container content-section">
-            <h2 class="section-header">CART</h2>
             <div class="cart-row">
                 <span class="cart-item cart-header cart-column">Wat</span>
                 <span class="cart-price cart-header cart-column">Prijs</span>
@@ -56,8 +59,8 @@
             <div class="cart-items">
             </div>
             <div class="cart-total">
-                <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">0</span>
+                <strong class="cart-total-title">Totaal</strong>
+                <span class="cart-total-price"></span>
             </div>
             <button class="btn btn-primary btn-purchase" type="button">KOOP</button>
         </section>
