--- a/store.html
+++ b/store.html
@@ -17,6 +17,8 @@
                         <span>€</span>
                         <span class="shop-item-price">1.50</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
+                        <p>Stock: 2</p>
+
                     </div>
                 </div>
                 <div class="shop-item">
@@ -26,6 +28,7 @@
                         <span>€</span>
                         <span class="shop-item-price">3,00</span>
                         <button class="btn btn-primary shop-item-button"type="button">Voeg to</button>
+                        <p>Stock: 3</p>
                     </div>
                 </div>
                 <div class="shop-item">
@@ -35,6 +38,8 @@
                         <span>€</span>
                         <span class="shop-item-price">2.00</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
+                        <p>Stock: 7</p>
+
                     </div>
                 </div>
                 <div class="shop-item">
@@ -44,6 +49,8 @@
                         <span>€</span>
                         <span class="shop-item-price">4.00</span>
                         <button class="btn btn-primary shop-item-button" type="button">Voeg to</button>
+                        <p>Stock: 9</p>
+
                     </div>
                 </div>
             </div>
