--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Winkelwagen</title>
     <meta name="description" content="This is the description">
     <link rel="stylesheet" href="styles.css" />
-    <script src="store.js" async></script>
+    <!-- <script src="store.js" async></script> -->
 
     <script>
         function getOpposite(bool) {
