--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <title>Winkelwagen</title>
     <meta name="description" content="This is the description">
     <link rel="stylesheet" href="styles.css" />
-    <!-- <script src="store.js" async></script> -->
 
     <script>
         function getOpposite(bool) {
@@ -101,6 +100,8 @@
             <button class="btn btn-primary btn-purchase" type="button">KOOP</button>
         </section>
     
+        <script src="store.js" ></script>
+
     </body>
 
 </html>
